Fixed nav-header z-index

--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ a {
     display: flex;
     align-items: end;
     justify-content: center;
-    z-index: 999;
+    z-index: 9999;
     position: fixed;
     background: rgba(9, 9, 9, 0.7);
     backdrop-filter: blur(10px);
